--- a/project2/sqrt/Makefile
+++ b/project2/sqrt/Makefile
@@ -2,8 +2,8 @@
 EXAMPLE=squareroot
 CPP_SRC=sqrt_main.cpp 
 ISPC_SRC=sqrt.ispc
-ISPC_IA_TARGETS=sse2-i32x4,sse4-i32x8,avx1-i32x16,avx2-i32x16,avx512knl-i32x16,avx512skx-i32x16
-#ISPC_IA_TARGETS=avx2-i32x16,sse2-i32x4,sse4-i32x8
+#ISPC_IA_TARGETS=sse2-i32x4,sse4-i32x8,avx1-i32x16,avx2-i32x16,avx512knl-i32x16,avx512skx-i32x16
+ISPC_IA_TARGETS=sse2
 ISPC_ARM_TARGETS=neon
 
 include ../common.mk
